--- a/angular/src/app/main/categories/categories/categories.component.html
+++ b/angular/src/app/main/categories/categories/categories.component.html
@@ -54,18 +54,18 @@
                                             <p-sortIcon field="title"></p-sortIcon>
                                         </th>
                                      
-                                        <th pSortableColumn="description">
+                                        <th>
                                             Description
-                                             <p-sortIcon field="description"></p-sortIcon>
+                                            
                                          </th> 
-                                         <th pSortableColumn="creationDate">
+                                         <th pSortableColumn="CreationTime">
                                             Created On
-                                             <p-sortIcon field="creationDate"></p-sortIcon>
+                                             <p-sortIcon field="CreationTime"></p-sortIcon>
                                          </th> 
                                         
-                                         <th pSortableColumn="createdBy">
+                                         <th pSortableColumn="CreatorUserId">
                                             Created By
-                                             <p-sortIcon field="createdBy"></p-sortIcon>
+                                             <p-sortIcon field="CreatorUserId"></p-sortIcon>
                                          </th>
                                         
                                         
