--- a/angular/src/app/main/TasksCheckList/create-or-edit-task/create-or-edit-task.component.html
+++ b/angular/src/app/main/TasksCheckList/create-or-edit-task/create-or-edit-task.component.html
@@ -1,5 +1,4 @@
 <div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
-
     <div class="row">
         <div class="col-lg-12">
             <div class="kt-portlet" id="kt_portlet">
@@ -28,46 +27,47 @@
                                         <label for="dateOfBirth">Closing Month</label>
                                         <div class="month-calender">
                                             <form class="container">
-                                                <input [(ngModel)]="checklist.closingMonth" autocomplete="off" class="form-control" name="date" bsDatepicker [bsConfig]="{dateInputFormat: 'MM/YYYY'}" (onShown)="onOpenCalendar($event)">
-                                                </form>
+                                                <input [(ngModel)]="checklist.closingMonth" autocomplete="off"
+                                                    class="form-control" name="date" bsDatepicker
+                                                    [bsConfig]="{dateInputFormat: 'MM/YYYY'}"
+                                                    (onShown)="onOpenCalendar($event)">
+                                            </form>
                                         </div>
-                                    </div> 
+                                    </div>
                                 </div>
-                               
-                                
                             </div>
-                            <div class="row"> 
+                            <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label for="email"> Task Name</label>
                                         <input type="email" class="form-control  bsDatepicker"
                                             [(ngModel)]="checklist.taskName">
-                                            
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                    <label>Assignee</label>
-                                    <app-user-list-component></app-user-list-component>
+                                        <label>Assignee</label>
+                                        <app-user-list-component></app-user-list-component>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">   
+                            <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group" *ngIf="commantBox">
-                                        <label >Comments</label>
-                                        <div (click)="commentClick()" >
+                                        <label>Comments</label>
+                                        <div (click)="commentClick()">
                                             <div class="kt-user-card-v2">
                                                 <div class="kt-user-card-v2__pic">
-                                                    <div class="kt-badge kt-badge--xl kt-badge--warning">{{userSignInName}}</div>
+                                                    <div class="kt-badge kt-badge--xl kt-badge--warning">
+                                                        {{userSignInName}}</div>
                                                 </div>
-                                                <input [(ngModel)]="checklist.commentBody"  class="form-control">
-                                            </div>  
+                                                <input [(ngModel)]="checklist.commentBody" class="form-control">
+                                            </div>
                                         </div>
                                     </div>
 
                                     <div class="form-group" *ngIf="commantModal">
-                                        <label >Comments</label>
+                                        <label>Comments</label>
                                         <p-editor [(ngModel)]="checklist.commentBody" name="HtmlEditorInput"
                                             [style]="{'height':'150px'}">
                                         </p-editor>
@@ -84,7 +84,7 @@
                                         <p-editor [(ngModel)]="checklist.instruction" name="HtmlEditorInput"
                                             [style]="{'height':'150px'}"></p-editor>
                                     </div>
-                                    
+
                                 </div>
                             </div>
                         </div>
@@ -94,11 +94,14 @@
                                     <div class="form-group">
                                         <label>Frequency</label>
                                         <select class="form-control input-medium"
-                                        [(ngModel)]="checklist.frequency">
+                                            (change)="onChange($event.target.value)" [(ngModel)]="checklist.frequency">
+                                            <option [ngValue]="undefined" hidden>Criteria</option>
+                                            <option value="5">None</option>
                                             <option value="1">Monthly</option>
                                             <option value="2">Quarterly</option>
                                             <option value="3">Annually</option>
                                             <option value="4">XNumberOfMonths</option>
+
 
                                         </select>
                                     </div>
@@ -113,8 +116,8 @@
                                                     </label>
                                                 </span>
                                             </div>
-                                            <select class="form-control input-medium"
-                                            [(ngModel)]="checklist.dueOn">
+                                            <select class="form-control input-medium" (change)="onValueChange()"
+                                                [(ngModel)]="checklist.dueOn">
                                                 <option value="1">1</option>
                                                 <option value="2">2</option>
                                                 <option value="3">3</option>
@@ -128,12 +131,14 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <label>No of Months</label>
-                                        <input type="text" name="noOfMonths" class="form-control bsDatepicker" [(ngModel)]="checklist.noOfMonths" >
+                                        <input type="text" name="noOfMonths" [disabled]="enableValue == false"
+                                            class="form-control bsDatepicker" [(ngModel)]="checklist.noOfMonths">
                                     </div>
                                     <div class="form-group">
-                                        <label>Days Before</label>
+                                        <label>&nbsp;&nbsp;</label>
                                         <select class="form-control input-medium"
-                                        [(ngModel)]="checklist.dayBeforeAfter">
+                                            (change)="onDaysClick($event.target.value)"
+                                            [(ngModel)]="checklist.dayBeforeAfter">
                                             <option value=true>Days Before</option>
                                             <option value=false>Days After</option>
                                         </select>
@@ -143,22 +148,31 @@
                                     <div class="form-group">
                                         <label>Ends on</label>
                                         <form class="container">
-                                            <input [(ngModel)]="checklist.endsOn" autocomplete="off" class="form-control" name="date" bsDatepicker [bsConfig]="{dateInputFormat: 'MM/YYYY'}" (onShown)="onOpenCalendar($event)">
-                                            </form>
+                                            <input [(ngModel)]="checklist.endsOn" [disabled]="endOnIsEnabled == false" autocomplete="off"
+                                                class="form-control" name="date" bsDatepicker
+                                                [bsConfig]="{dateInputFormat: 'MM/YYYY'}"
+                                                (onShown)="onOpenCalendar($event)">
+                                        </form>
                                     </div>
                                     <div class="kt-radio-list eom-radio">
                                         <span></span>
                                         <label class="kt-radio kt-radio--brand" name="radio5">
-                                            <input type="radio" value="checklist.endOfMonth" [(ngModel)]="checklist.endOfMonth" >End of month 
+                                            <input type="radio" value="true"
+                                                (change)="handleRadioChange($event.target.value)"
+                                                [(ngModel)]="checklist.endOfMonth">End of month
                                             <span></span>
                                         </label>
                                     </div>
                                 </div>
                             </div>
-                            <div class="drag_drop_box" >
+                            <div class="row">
+                                <span style="padding-left: 10px;">{{SelectionMsg}}</span>
+                            </div>
+
+                            <div class="drag_drop_box">
                                 <label>Attachments</label>
-                            <ng-uppy [config]="settings" (onFileUpload)="onFileUpload($event)"></ng-uppy>
-                        </div>
+                                <ng-uppy [config]="settings" (onFileUpload)="onFileUpload($event)"></ng-uppy>
+                            </div>
                         </div>
                     </div>
                     <div class="kt-portlet__head">
@@ -169,7 +183,6 @@
                         </button>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
