--- a/angular/src/app/main/TasksCheckList/task-details/task-details.component.html
+++ b/angular/src/app/main/TasksCheckList/task-details/task-details.component.html
@@ -88,7 +88,7 @@
                                         <option value="Febuary">Complete</option>
                                     </select> -->
                                     <div class="">
-                                        <app-status [StatusList] = taskDetailObject.taskStatus ></app-status>
+                                        <!-- <app-status [StatusList] = taskDetailObject.taskStatus ></app-status> -->
                                         
                                     </div>
                                 </div>
