--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -129,3 +129,21 @@ body .ui-table .ui-table-tbody > tr:nth-child(even){
     animation: glowing 2s infinite;
 }
 
+.primeng-paging-container .paginator-counter .ui-paginator{
+    background-color: transparent !important;
+    border: 1px solid transparent !important;
+}
+.primeng-paging-container .paginator-counter .ui-inputtext{
+    border: 1px solid transparent;
+    align-items: center;
+}
+.primeng-paging-container .paginator-counter .ui-corner-right{
+    margin-top: 2px;
+    margin-right: 2px;
+}
+.primeng-paging-container .paginator-counter .ui-paginator .ui-paginator-pages .ui-paginator-page.ui-state-active{
+    border-radius: 30px;
+}
+.primeng-paging-container .paginator-counter .ui-dropdown-label {
+    border:1px solid  #a6a6a6; 
+}
