--- a/angular/src/app/main/categories/categorie-drop-down/categorie-drop-down.component.html
+++ b/angular/src/app/main/categories/categorie-drop-down/categorie-drop-down.component.html
@@ -1,10 +1,15 @@
 
     <div class="form-group">
         <label>Category</label>
-        <select id="categories" (change)="categoryValuee()" value = "1" name="categories" [(ngModel)]="categoryId" class="form-control input-medium select2-search select2-search--inline"  >
+        <select id="categories" (change)="categoryValuee()" name="categories" [(ngModel)]="categoryId" class="form-control input-medium select2-search select2-search--inline"  >
             <option  *ngFor="let item of category;" 
             [value]="item.value">
-                {{item.name}}
+            {{item.name}} 
+            </option>
+            <option>
+            <button (click)="addNew()" type="button" class="btn btn-primary">Addnew</button>
+              
             </option>
         </select>   
     </div>
+  
