--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -147,3 +147,27 @@ body .ui-table .ui-table-tbody > tr:nth-child(even){
 .primeng-paging-container .paginator-counter .ui-dropdown-label {
     border:1px solid  #a6a6a6; 
 }
+.task-table-inner th{
+    background-color: transparent !important; 
+    font-weight: 500 !important;  
+    color:#575962 !important;
+    width:20%;
+}
+.task-table-inner th:focus{ 
+    color:#8397ff!important;
+    border:1px solid transparent !important;
+    outline:none !important;
+}
+.task-table-inner td{ 
+    width: 20%!important;
+}
+.task-table-inner .task-task-name:focus{ 
+    color:#121213!important;
+    border:1px solid transparent !important;
+    outline:none !important;
+}
+.task-table-inner .task-task-name:active{ 
+    color:#575962!important;
+    border:1px solid transparent !important;
+    outline:none !important;
+}
